Windows are draggable now. Also added desktop bg and task bar

--- a/drug-dealer-chat-simulator/src/components-standalone/os/OSWindow/OSWindow.css
+++ b/drug-dealer-chat-simulator/src/components-standalone/os/OSWindow/OSWindow.css
@@ -6,3 +6,12 @@
 .os-window .top {
     height: 2.25rem;
 }
+
+.os-window .content {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+
+    background: linear-gradient(rgb(230, 230, 230), rgb(205, 205, 205));
+}
