--- a/drug-dealer-chat-simulator/src/App.css
+++ b/drug-dealer-chat-simulator/src/App.css
@@ -10,6 +10,15 @@
   }
 }
 
+.screen {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 html {
   overflow-x: hidden; /* Prevents mobile scrolling to the right on some devices */
 }
@@ -18,6 +27,9 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+
+  font-family: Tahoma, "Trebuchet MS", sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 
