--- a/drug-dealer-chat-simulator/src/App.css
+++ b/drug-dealer-chat-simulator/src/App.css
@@ -28,10 +28,28 @@ body {
   padding: 0;
   overflow-x: hidden;
 
-  font-family: Tahoma, "Trebuchet MS", sans-serif;
+  /* font-family: Tahoma, "Trebuchet MS", sans-serif; */
   /* font-family: Arial, Helvetica, sans-serif; */
 }
 
+input {
+  all: unset;
+
+  padding: 0.15rem;
+  padding-left: 0.5rem;
+  box-sizing: border-box;
+  
+  background-color: rgb(51, 51, 51);
+  border-radius: 6px;
+  outline: solid 1px gray;
+  font-weight: normal;
+  
+}
+input:focus {
+  outline: solid 1px rgba(0, 81, 255, 0.5);
+  box-shadow: inset -1px -1px 6px 0px rgba(0, 81, 255, 0.7);
+  color: var(--color-white);
+}
 
 .flex {
   display: flex;
@@ -75,7 +93,7 @@ body {
   display: flex;
   justify-content: space-around;
 }
-.full-width {
+.full-width, .width-100 {
   width: 100%;
 }
 .flex-1 {
@@ -198,6 +216,30 @@ body {
 .padding-top-4 {
   padding-top: 4rem;
 }
+.padding-left-0 {
+  padding-left: 0rem;
+}
+.padding-left-quarter {
+  padding-left: 0.25rem;
+}
+.padding-left-half {
+  padding-left: 0.5rem;
+}
+.padding-left-1 {
+  padding-left: 1rem;
+}
+.padding-right-0 {
+  padding-right: 0rem;
+}
+.padding-right-quarter {
+  padding-right: 0.25rem;
+}
+.padding-right-half {
+  padding-right: 0.5rem;
+}
+.padding-right-1 {
+  padding-right: 1rem;
+}
 .gap-quarter {
   gap: 0.25rem;
 }
@@ -235,6 +277,11 @@ body {
 .flex-content.right, .flex-content.align-right {
   justify-content: end;
 }
+.fit-content {
+  width: fit-content;
+  height: fit-content;
+}
+
 
 .columns {
   display: flex;
@@ -279,6 +326,9 @@ body {
   font-style: italic;
 }
 
+.text-shadow, .text-shadowed {
+  text-shadow: 0px 0px 2px rgb(49, 49, 49), 1px 1px 1px rgb(0, 0, 0), 0px 0px 1px rgb(0, 0, 0), 0px 0px 1px rgb(43, 43, 43);
+}
 .shadowed-white, .shadow-white {
   box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 1px;
 }
@@ -345,5 +395,4 @@ img.cover, img.img-cover, img.object-fit-cover {
   font-family: Arial;
   font-size: 0.75em;
 }
-
 
