--- a/drug-dealer-chat-simulator/src/components-standalone/os/OSWindowButton/OSWindowButton.css
+++ b/drug-dealer-chat-simulator/src/components-standalone/os/OSWindowButton/OSWindowButton.css
@@ -5,7 +5,7 @@
     text-align: center;
 
     width: 2rem;
-    height: 1.5rem;
+    height: 1.25rem;
     line-height: 0.5rem;
 
     border: solid 1px var(--color-bg-2);
@@ -18,8 +18,14 @@
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     padding: 0.25rem;
+
+    cursor: pointer;
 }
 
-.red:hover {
-    background-color: var(--color-dark-red);
+.os-window-button.red:hover {
+    background-color: #4A3333;
+}
+.os-window-button.gray:hover {
+    background-color: var(--color-bg-2);
+    filter: opacity(0.8);
 }
