Made Room Scene and tooltips. Added shut down and logoff to start menu

--- a/drug-dealer-chat-simulator/src/App.css
+++ b/drug-dealer-chat-simulator/src/App.css
@@ -10,7 +10,9 @@
   }
 }
 
-.screen {
+
+
+.scene-box, .App, #App {
   position: relative;
   width: 100vw;
   height: 100vh;
@@ -192,6 +194,12 @@ input:focus {
   margin-bottom: 4rem;
 }
 
+.padding-0 {
+  padding-top: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
+}
 .padding-half {
   padding: 0.5rem;
 }
@@ -334,6 +342,9 @@ input:focus {
 }
 .shadowed, .shadow {
   box-shadow: rgba(55, 55, 55, 0.2) 0px 2px 8px;
+}
+.shadowed.more, .shadow.more {
+  box-shadow: rgba(55, 55, 55, 0.35) 0px 1px 13px;
 }
 .shadowed-half, .shadow-half {
   box-shadow: rgba(55, 55, 55, 0.1) 0px 2px 8px;
