--- a/drug-dealer-chat-simulator/src/components-standalone/os/Styles/OSStyle.css
+++ b/drug-dealer-chat-simulator/src/components-standalone/os/Styles/OSStyle.css
@@ -7,6 +7,7 @@
 
     --color-gray: rgb(71, 71, 71);
     --color-light-gray: rgb(160, 150, 150);
+    --color-lighter-gray: rgb(230, 230, 230);
     --color-dark-red: rgb(222, 85, 85);
     
     --color-white: rgb(249, 249, 249)    ;
