--- a/drug-dealer-chat-simulator/src/os-apps/Messenger/Messenger.css
+++ b/drug-dealer-chat-simulator/src/os-apps/Messenger/Messenger.css
@@ -1,28 +1,50 @@
 
+:root {
+    --messenger-color-1: rgb(234, 206, 255);
+    --messenger-color-2: rgb(175, 125, 210);
+    --messenger-color-dark: rgb(121, 91, 145);
+    
+}
+
 .messenger {
-    background-color: #FDFDFD;
-    font-size: 1.1rem;
-    background-image: url(Background.png);
-    background-color: rgba(255, 255, 255, 0.85);
+    /* background-color: #FDFDFD; */
+    font-size: 0.75rem;
     background-blend-mode: lighten;
     background-size: cover;
+    font-family: Pixel;
 }
 
 .messenger .left {
-    border-right: solid 2px rgb(196, 196, 196);
     min-width: 300px;
+    /* background-color: rgb(255, 255, 255); */
+    border-radius: 8px;
 }
 
 .messenger .me {
+    background-size: cover;
+    background-image: url(Background.png);
+}
+.messenger .me-bg {
+    background-color: rgba(255, 255, 255, 0.85);
     padding: 0.5rem;
 }
 .messenger .me .name-and-status-text {
     padding-left: 0.5rem;
-    padding-top: 0.6rem;
+    gap: 0.25rem;
 }
 .messenger-contact .name-and-status-text {
     padding-top: 0.4rem;
     padding-left: 0.5rem;
+}
+.me-status-text {
+    background: none;
+    border: solid gray 1px;
+    border-radius: 0px;
+    outline: none;
+    color: rgb(33, 33, 33);
+}
+.name-and-status-text .other {
+    color: rgb(184, 184, 184);
 }
 
 .me-avatar-box img {
@@ -35,19 +57,90 @@
 }
 
 .messenger .status-icon {
-    height: 1rem;
-    width: 1rem;
+    height: 1.1rem;
+    width: 1.1rem;
     margin-top: 3px;
     margin-right: 2px;
 }
 .status-text {
     color: rgb(163, 163, 163);
-    font-size: 1rem;
 }
 
 
+
+
+.search-contact {
+    padding: 0.5rem;
+    background: linear-gradient(var(--messenger-color-1), var(--messenger-color-2));
+    border-top: solid 1px var(--messenger-color-dark);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+.search-contact input {
+    background-color: white;
+    padding: 0.25rem;
+    padding-left: 0.5rem;
+    border-radius: 1px;
+    border: solid #665555 1px;
+    outline: none;
+    color: gray;
+}
+.search-contact img {
+    height: 1.4rem;
+    margin-left: 0.5rem;
+}
+
 .messenger .contacts {
-    background-color: rgba(157, 212, 243, 0.5);
+    background-color: rgb(254, 253, 255);
     border-top: solid #665555 1px;
-    
+}
+.messenger .contacts .messenger-contact:not(:first-child) {
+    margin-top: 0.5rem;
+}
+
+
+
+
+/* ----------- Right Side ------------*/
+.messenger .right {
+    border-left: solid 1px var(--messenger-color-dark);
+    min-width: 500px;
+}
+.messenger .right .header {
+    background-color: white;
+    border-bottom: solid 1px var(--messenger-color-dark);
+    padding: 0.5rem;
+}
+
+.messages {
+    height: 500px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    background-image: url(Background.png);
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgba(226, 195, 255, 0.8);
+    padding-top: 0.5rem;
+}
+.chat-message {
+    max-width: 55%;
+    font-size: 0.75rem;
+}
+.chat-message.incoming {
+    margin-left: 0.5rem;
+}
+.chat-message .chat-message-avatar {
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+}
+.chat-message.incoming .chat-message-avatar {
+    left: 0px;
+    bottom: 0px;
+}
+.chat-message.incoming .text {
+    border-radius: 8px;
+    margin-left: 2.5rem;
+    background-color: white;
+    padding: 0.5rem;
 }
